[package]
name         = "1bit-halo-agents"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.86"
license      = "MIT"
repository   = "https://github.com/bong-water-water-bong/halo-agents"
authors      = ["strix-ai-rs contributors"]
description  = "1bit-halo-agents — 17 specialist routers (Rust port of agent-cpp). Async registry + TypedSpecialist + JsonSchema. Drop-in for 1bit-halo-mcp + MCP clients."

[lib]
path = "src/lib.rs"

[dependencies]
anyhow      = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
schemars    = { version = "1", features = ["preserve_order"] }
